fixed some alignment and squashed bug preventing ability to add first wish

--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -2,6 +2,7 @@
   color: red;
   border: 1px solid red;
   padding: 5px;
-  width: 25px;
+  width: 35px;
   text-align: center;
+  margin: auto;
 }
